# experimental-llm-pipeline

./: .gitignore  readme.md  requirements.txt
mistral/: ollama_setup.md
nllb/: .gitignore  pyproject.toml  readme.md
nllb/local_models/: .gitignore
nllb/src/: cli.py  example_usage.py
nllb/src/models/: ctranslate.py
nllb/src/nllb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
