[project]
name = "nllb"
version = "0.1.0"
description = "Local NLLB translator"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
